docker-compose fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,4 @@
-api:
-  build: .
-  command: babel-node /iojs-api/index.js --restart=always
-  ports:
-    - "3000:3000"
-  links:
-    - mongodb
-brainstorming-blog:
+blog:
   image: apetalas/angular2:latest
   ports:
     - "3300:5555"
