package.json fixed

--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
   "dependencies": {
     "angular2": "2.0.0-alpha.29",
     "es6-module-loader": "^0.15.0",
+    "gulp-css-inline-images": "^0.1.1",
+    "gulp-file": "^0.2.0",
+    "reflect-metadata": "0.1.0",
     "systemjs": "^0.16.0",
-    "zone.js": "^0.4.1",
-    "reflect-metadata": "0.1.0"
+    "zone.js": "^0.4.1"
   }
 }
